fix layout issue

--- a/src/scss/pages/modals.scss
+++ b/src/scss/pages/modals.scss
@@ -51,6 +51,67 @@
   }
 }
 
+.moreInfo {
+  filter: invert(100%);
+}
+
+.bgImgleft1 {
+  padding-left: 368px;
+  padding-top: 504px;
+  transform: scale(0.5);
+  background-image: url("/assets/images/comics/comics1.jpg");
+  background-size: cover;
+  transition: 0.5s ease-in-out;
+  z-index: 4;
+}
+
+.bgImgleft2 {
+  padding-left: 558px;
+  padding-top: 380px;
+  transform: scale(0.40);
+  background-image: url("/assets/images/comics/comics2.jpg");
+  background-size: cover;
+  transition: 0.5s ease-in-out;
+  z-index: 4;
+}
+
+.bgImgleft3 {
+  padding-left: 368px;
+  padding-top: 504px;
+  transform: scale(0.5);
+  background-image: url("/assets/images/comics/comics3.jpg");
+  background-size: cover;
+  transition: 0.5s ease-in-out;
+  z-index: 4;
+}
+
+.textFull,
+.break {
+  display: block;
+  padding-bottom: 25px;
+}
+
+.text,
+.text2,
+.text3 {
+  color: white;
+  font-size: 16px;
+  width: 10vw;
+  line-height: 1.5;
+}
+
+.textFull,
+.textFull2,
+.textFull3 {
+  display: none;
+  flex-direction: column;
+  color: white;
+  padding: 10px;
+  font-size: 24px;
+  line-height: 1.5;
+  width: 45vw;
+}
+
 .close,
 .close2,
 .close3 {
@@ -67,9 +128,9 @@
 .categoryIMG {
   display: none;
   position: absolute;
-  top: 145px;
+  top: 65px;
   left: 280px;
-  font-size: 185px;
+  font-size: 144px;
   font-weight: 700;
   z-index: 3;
   color: #f0b966;
@@ -78,21 +139,21 @@
 .categoryIMG2 {
   display: none;
   position: absolute;
-  top: 200px;
+  top: 85px;
   left: 280px;
   font-size: 86px;
   font-weight: 700;
   z-index: 3;
   color: #f0b966;
-  width: 40vw;
+  width: 50vw;
 }
 
 .categoryIMG3 {
   display: none;
   position: absolute;
-  top: 145px;
+  top: 55px;
   left: 280px;
-  font-size: 185px;
+  font-size: 144px;
   font-weight: 700;
   z-index: 3;
   color: #f0b966;
